<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".exchange.id.IdFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_email"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/btn_sign_up"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/card_number"
            android:paddingStart="24dp"
            android:text=""
            android:lines="1"
            android:importantForAutofill="no"
            android:ems="10"
            android:imeOptions="actionNext"
            android:freezesText="true"
            android:saveEnabled="true"
            android:textCursorDrawable="@drawable/edit_text_cursore"
            android:backgroundTint="@color/white"
            android:textSize="16sp"
            android:inputType="textWebEmailAddress"
            android:textColorHint="@color/edit_hint_color"
            />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_password"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/btn_sign_up"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_email"
        app:cardCornerRadius="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/personal_number"
            android:paddingStart="24dp"
            android:text=""
            android:lines="1"
            android:ems="10"
            android:freezesText="true"
            android:saveEnabled="true"
            android:textCursorDrawable="@drawable/edit_text_cursore"
            android:backgroundTint="@color/white"
            android:textSize="16sp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColorHint="@color/edit_hint_color"
            android:importantForAutofill="no" />

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.button.MaterialButton
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:id="@+id/btn"
        android:padding="5dp"
        android:backgroundTint="#C1C4DF"
        android:layout_marginTop="48dp"
        app:cornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@+id/cv_password"
        app:layout_constraintStart_toStartOf="@+id/cv_password"
        app:layout_constraintEnd_toEndOf="@+id/cv_password"
        android:text="@string/get_started"
        android:textColor="#757578"
        />
</androidx.constraintlayout.widget.ConstraintLayout>