<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".home.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_rec"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:importantForAccessibility="no"
            android:outlineAmbientShadowColor="@color/violet_85"
            android:outlineProvider="background"
            android:outlineSpotShadowColor="@color/violet_85"
            android:scaleType="centerCrop"
            android:src="@drawable/rectangle_338"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline13"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="180dp"
            android:layout_height="280dp"
            android:layout_marginEnd="16dp"
            android:importantForAccessibility="no"
            android:padding="5dp"
            android:layout_marginBottom="32dp"
            android:scaleType="centerCrop"
            android:src="@drawable/saly_15"
            app:layout_constraintBottom_toBottomOf="@id/iv_rec"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi"
            android:textColor="@color/text_color"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/guideline11"
            app:layout_constraintStart_toStartOf="@id/guideline12" />

        <TextView
            android:id="@+id/tv_future"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/future_explorer"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/guideline11"
            app:layout_constraintStart_toStartOf="@id/guideline12" />

        <TextView
            android:id="@+id/tv_future_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/future_explorer_desc"
            android:textColor="@color/text_desc"
            android:layout_marginTop="24dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@id/guideline12"
            app:layout_constraintTop_toBottomOf="@+id/tv_future" />

        <TextView
            android:id="@+id/tv_future_make"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/make_money"
            android:textColor="@color/text_desc"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginStart="36dp"
            app:layout_constraintStart_toStartOf="@id/guideline12"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/tv_future_desc"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/rv_gird"
            android:clipToPadding="false"
            app:spanCount="3"
            android:overScrollMode="never"
            android:layout_margin="12dp"
            tools:listitem="@layout/item_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_rec"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>